--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --mode=development src/app.js",
     "test": "jest",
     "build": "webpack src/app.js -o public/bundle.js"
   },
